--- a/settings.gradle
+++ b/settings.gradle
@@ -2,8 +2,8 @@ pluginManagement {
     repositories {
         gradlePluginPortal()
         maven {
-            name = 'MinecraftForge'
-            url = 'https://maven.minecraftforge.net/'
+            name = 'Neofoged'
+            url = 'https://maven.neoforged.net/releases'
         }
 		maven { url 'https://plugins.gradle.org/m2/' }
 		maven {
