--- a/gradle.properties
+++ b/gradle.properties
@@ -40,6 +40,7 @@ mod_credits=ashar42
 license=MIT
 issue_tracker=https://github.com/wendall911/Homeostatic/issues
 mod_description=A mod about body temperature and moisture. Achieving homeostasis after a little trial and error.
+maven_url=https://maven.pkg.github.com/wendall911/Homeostatic
 mod_update_branch=1.19
 
 # CurseForge/Modrinth Options
