--- a/gradle.properties
+++ b/gradle.properties
@@ -36,23 +36,22 @@ jei_version=15.2.0.22
 rei_version=12.0.625
 spectrelib_version=0.13.15+1.20.1
 spectrelib_range=[0.13,0.14)
-architectury_version=4663009
+architectury_version=9.2.14
 cardinal_components_version=5.2.0
 patchouli_version=1.20.1-85
 patchouli_provider_version=1.20.1-1.0.9-Snapshot.4
-serene_seasons_forge_version=4611122
-simpletextoverlay_forge_version=5422365
-simpletextoverlay_fabric_version=5422364
-bop_forge_version=4617259
-terrablender_forge_version=4608122
+serene_seasons_forge_version=9.0.0.46
+simpletextoverlay_version=1.20.1-5.2.1.7
+bop_forge_version=18.0.0.598
+terrablender_forge_version=3.0.1.7
 byg_forge_version=???
-corgilib_forge_version=4583906
+corgilib_forge_version=1.20.1-4.0.1.3-forge
 geckolib_forge_version=4.2
-create_forge_version=4835191
-create_fabric_version=5245234
-ars_forge_version=4641979
+create_forge_version=0.5.1.f-27
+create_fabric_version=0.5.1-f-build.1460+mc1.20.1
+ars_forge_version=4.9.0
 twilightforest_forge_version=4653704
-fabric_seasons_version=4699698
+fabric_seasons_version=2.3+1.20
 
 # Mod options
 mod_name=Homeostatic
