Ensure datagen runs for NeoForge. Use the dumb gui in NeoForge, as it can't properly launch commandline mode.

--- a/NeoForge/build.gradle
+++ b/NeoForge/build.gradle
@@ -24,9 +24,9 @@ neoForge {
         }
         server {
             server()
-            programArgument '--nogui'
         }
         data {
+            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
             data()
         }
     }
