Add support for Sewing Kit mod. #56

--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,7 @@ patchouli_version=1.18.2-71.1
 patchouli_provider_version=1.18.2-1.0.6-Snapshot.4
 mantle_version=1.9.45
 tic_version=3.6.4.113
+sewingkit_version=1.5.9
 
 # Mod options
 mod_id=homeostatic
