--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,12 @@ repositories {
         name = 'Progwml6 maven'
         url = 'https://dvs1.progwml6.com/files/maven'
     }
+    maven {
+        url 'https://www.dogforce-games.com/maven/'
+        content {
+            includeGroup "dev.gigaherz.sewingkit"
+        }
+    }
 }
 
 group = 'com.github.wendall911.homeostatic'
@@ -100,13 +106,17 @@ dependencies {
     compileOnly fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
     implementation fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
     implementation fg.deobf("xyz.brassgoggledcoders:PatchouliProvider:${patchouli_provider_version}")
+    compileOnly fg.deobf("dev.gigaherz.sewingkit:SewingKit-${minecraft_version}:${sewingkit_version}")
 
     if (System.getenv('DATA_GEN') != null) {
         runtimeOnly fg.deobf("curse.maven:create-328085:4625533")
+        runtimeOnly fg.deobf("dev.gigaherz.sewingkit:SewingKit-${minecraft_version}:${sewingkit_version}")
     }
     else {
         runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}")
         runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
+        //runtimeOnly fg.deobf("dev.gigaherz.sewingkit:SewingKit-${minecraft_version}:${sewingkit_version}")
+        //runtimeOnly fg.deobf("curse.maven:immersive_engineering-231951:4412849")
         //runtimeOnly fg.deobf("slimeknights.tconstruct:TConstruct:${minecraft_version}-${tic_version}")
         //runtimeOnly fg.deobf("slimeknights.mantle:Mantle:${minecraft_version}-${mantle_version}")
         //runtimeOnly fg.deobf("curse.maven:create-328085:4625533")
@@ -270,6 +280,7 @@ task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
         mainFile.addOptional('kobolds')
         mainFile.addOptional('primal-winter')
         mainFile.addOptional('tinkers-construct')
+        mainFile.addOptional('sewing-kit')
     }
 }
 
@@ -286,18 +297,18 @@ modrinth {
         uploadFile = file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar")
         gameVersions = "${release_versions}".split(",") as List<String>
         dependencies {
-			optional.project "create"
-			optional.project "ecologics"
-			optional.project "create-cafe"
-			optional.project "scuba-gear"
-			optional.project "farmers-delight"
-			optional.project "xercamod"
-			optional.project "leave-my-bars-alone"
-			optional.project "sprout"
-			optional.project "patchouli"
-			optional.project "jei"
-			optional.project "biomesyougo"
-			optional.project "kobolds"
+            optional.project "create"
+            optional.project "ecologics"
+            optional.project "create-cafe"
+            optional.project "scuba-gear"
+            optional.project "farmers-delight"
+            optional.project "xercamod"
+            optional.project "leave-my-bars-alone"
+            optional.project "sprout"
+            optional.project "patchouli"
+            optional.project "jei"
+            optional.project "biomesyougo"
+            optional.project "kobolds"
             optional.project "primal-winter"
             optional.project "tinkers-construct"
         }
