--- a/gradle.properties
+++ b/gradle.properties
@@ -57,6 +57,7 @@ create_neoforge_version=???
 create_fabric_version=???
 ars_neoforge_version=???
 twilightforest_forge_version=???
+sewingkit_version=2.0.4
 
 # Mod options
 mod_name=Homeostatic
