--- a/gradle.properties
+++ b/gradle.properties
@@ -53,6 +53,7 @@ create_fabric_version=5245234
 ars_forge_version=4641979
 twilightforest_forge_version=4653704
 fabric_seasons_version=4699698
+sewingkit_version=1.8.0
 
 # Mod options
 mod_name=Homeostatic
