--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,13 @@ subprojects {
             url = "https://maven.theillusivec4.top/"
         }
 
+        maven {
+            url 'https://www.dogforce-games.com/maven/'
+            content {
+                includeGroup "dev.gigaherz.sewingkit"
+            }
+        }
+
         if (project.hasProperty('localmaven')) {
             maven {
                 url "file://" + localmaven
