Add support for Sewing Kit mod. #56

--- a/gradle.properties
+++ b/gradle.properties
@@ -57,6 +57,7 @@ create_neoforge_version=???
 create_fabric_version=???
 ars_neoforge_version=???
 twilightforest_forge_version=???
+sewingkit_version=1.8.8
 
 # Mod options
 mod_name=Homeostatic
