--- a/buildSrc/src/main/groovy/multiloader-common.gradle
+++ b/buildSrc/src/main/groovy/multiloader-common.gradle
@@ -69,6 +69,13 @@ repositories {
         url "https://maven.shedaniel.me/" // for rei
     }
 
+    maven {
+        url 'https://www.dogforce-games.com/maven/'
+        content {
+            includeGroup "dev.gigaherz.sewingkit"
+        }
+    }
+
     if (project.hasProperty('localmaven')) {
         maven {
             url "file://" + localmaven
