Add support for Sewing Kit mod. #56

--- a/gradle.properties
+++ b/gradle.properties
@@ -31,6 +31,7 @@ jei_version=11.3.0.262
 patchouli_version=1.19.2-77
 patchouli_provider_version=1.19-1.0.7-Snapshot.2
 twilight_forest_version=4389567
+sewingkit_version=1.6.9
 
 # Mod options
 mod_id=homeostatic
