--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,12 @@ repositories {
             password = project.githubtoken
         }
     }
+    maven {
+        url 'https://www.dogforce-games.com/maven/'
+        content {
+            includeGroup "dev.gigaherz.sewingkit"
+        }
+    }
 }
 
 group = 'com.github.wendall911.homeostatic'
@@ -108,14 +114,17 @@ dependencies {
     compileOnly fg.deobf("curse.maven:create-328085:4835190")
     implementation fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
     implementation fg.deobf("xyz.brassgoggledcoders:PatchouliProvider:${patchouli_provider_version}")
+    compileOnly fg.deobf("dev.gigaherz.sewingkit:SewingKit-${minecraft_version}:${sewingkit_version}")
 
     if (System.getenv('DATA_GEN') != null) {
         runtimeOnly fg.deobf("curse.maven:create-328085:4835190")
+        runtimeOnly fg.deobf("dev.gigaherz.sewingkit:SewingKit-${minecraft_version}:${sewingkit_version}")
     }
     else {
         runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
         runtimeOnly fg.deobf("curse.maven:configured-457570:3947885")
         //runtimeOnly fg.deobf("curse.maven:primalwinter-393321:4499145")
+        //runtimeOnly fg.deobf("dev.gigaherz.sewingkit:SewingKit-${minecraft_version}:${sewingkit_version}")
         //runtimeOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
         //runtimeOnly fg.deobf("curse.maven:biomesoplenty-220318:${bop_version}")
         //runtimeOnly fg.deobf("curse.maven:corgilib-693313:4554111")
@@ -286,6 +295,7 @@ task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
         mainFile.addOptional('the-twilight-forest')
         mainFile.addOptional('primal-winter')
         mainFile.addOptional('tinkers-construct')
+        mainFile.addOptional('sewing-kit')
     }
 }
 
@@ -302,18 +312,18 @@ modrinth {
         uploadFile = file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar")
         gameVersions = "${release_versions}".split(",") as List<String>
         dependencies {
-			optional.project "create"
-			optional.project "ecologics"
-			optional.project "create-cafe"
-			optional.project "scuba-gear"
-			optional.project "farmers-delight"
-			optional.project "xercamod"
-			optional.project "leave-my-bars-alone"
-			optional.project "sprout"
-			optional.project "patchouli"
-			optional.project "jei"
-			optional.project "biomesyougo"
-			optional.project "kobolds"
+            optional.project "create"
+            optional.project "ecologics"
+            optional.project "create-cafe"
+            optional.project "scuba-gear"
+            optional.project "farmers-delight"
+            optional.project "xercamod"
+            optional.project "leave-my-bars-alone"
+            optional.project "sprout"
+            optional.project "patchouli"
+            optional.project "jei"
+            optional.project "biomesyougo"
+            optional.project "kobolds"
             optional.project "primal-winter"
             optional.project "tinkers-construct"
         }
