--- a/gradle.properties
+++ b/gradle.properties
@@ -38,7 +38,7 @@ spectrelib_range=[0.17,0.18)
 architectury_version=13.0.2
 cloth_config_version=15.0.127
 cardinal_components_version=6.1.0
-patchouli_version=???
+patchouli_version=1.21-87
 patchouli_provider_version=???
 serene_seasons_neoforge_version=5429913
 serene_seasons_fabric_version=5429912
