--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ mod_menu_version=11.0.1
 
 # NeoForge
 # https://projects.neoforged.net/neoforged/neoforge
-neoforge_version=21.0.38-beta
+neoforge_version=21.0.114-beta
 neoforge_loader_version_range=[4,)
 neoforge_mc_version_range=[1.21, 1.22)
 neo_form_version=1.21-20240613.152323
@@ -31,11 +31,11 @@ parchment_version=2024.06.23
 mappings_channel=parchment
 
 # Other mods
-jei_version=19.0.0.11
+jei_version=19.5.0.56
 rei_version=16.0.729
 spectrelib_version=0.17.1
 spectrelib_range=[0.17,0.18)
-architectury_version=13.0.2
+architectury_version=13.0.6
 cloth_config_version=15.0.127
 cardinal_components_version=6.1.0
 patchouli_version=1.21-87
@@ -58,6 +58,8 @@ create_fabric_version=???
 ars_neoforge_version=???
 twilightforest_forge_version=???
 sewingkit_version=2.0.4
+more_food_neoforge_version=5514755
+more_food_fabric_version=5514752
 
 # Mod options
 mod_name=Homeostatic
