Set minimum NeoForge version to stable release. Update SpectreLib version.

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,8 +20,8 @@ mod_menu_version=11.0.1
 
 # NeoForge
 # https://projects.neoforged.net/neoforged/neoforge
-neoforge_version=21.0.114-beta
-neoforge_loader_version_range=[4,)
+neoforge_version=21.0.143
+neoforge_loader_version_range=[21.0.143,)
 neoforge_mc_version_range=[1.21, 1.22)
 neo_form_version=1.21-20240613.152323
 
@@ -33,7 +33,7 @@ mappings_channel=parchment
 # Other mods
 jei_version=19.5.0.56
 rei_version=16.0.729
-spectrelib_version=0.17.1
+spectrelib_version=0.17.2
 spectrelib_range=[0.17,0.18)
 architectury_version=13.0.6
 cloth_config_version=15.0.127
