--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -57,7 +57,7 @@ dependencies {
         //modRuntimeOnly "curse.maven:biomesoplenty-220318:${bop_fabric_version}"
         //modRuntimeOnly "curse.maven:terrablender-565956:${terrablender_fabric_version}"
         modRuntimeOnly "curse.maven:simpletextoverlay-321283:${simpletextoverlay_fabric_version}"
-        modRuntimeOnly "curse.maven:more_food-874343:${more_food_fabric_version}"
+        //modRuntimeOnly "curse.maven:more_food-874343:${more_food_fabric_version}"
     }
 }
 
@@ -130,7 +130,7 @@ task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
         mainFile.addOptional('biomes-o-plenty')
         mainFile.addOptional('oh-the-biomes-youll-go')
         mainFile.addOptional('croptopia')
-        mainFile.addOptional('farmers-delight')
+        mainFile.addOptional('farmers-delight-refabricated')
         mainFile.addOptional('xercamod')
         mainFile.addOptional('kitteh6660s-morecraft')
         mainFile.addOptional('sophisticated-backpacks')
@@ -163,7 +163,7 @@ modrinth {
             optional.project 'ecologics'
             optional.project 'create-cafe'
             optional.project 'scuba-gear'
-            optional.project 'farmers-delight'
+            optional.project 'farmers-delight-refabricated'
             optional.project 'xercamod'
             optional.project 'leave-my-bars-alone'
             optional.project 'sprout'
