Add support for The Veggie Way

--- a/NeoForge/build.gradle
+++ b/NeoForge/build.gradle
@@ -99,6 +99,7 @@ dependencies {
         //runtimeOnly "curse.maven:phc_crops-361385:${phc_crops_neoforge_version}"
         //runtimeOnly "curse.maven:phc_trees-365460:${phc_trees_neoforge_version}"
         //runtimeOnly "curse.maven:phc_food_extended-402231:${phc_food_extended_neoforge_version}"
+        //runtimeOnly "curse.maven:the_veggie_way-270684:${the_veggie_way_neoforge_version}"
     }
 }
 
@@ -180,6 +181,7 @@ task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
         mainFile.addOptional('pams-harvestcraft-2-crops')
         mainFile.addOptional('pams-harvestcraft-2-trees')
         mainFile.addOptional('pams-harvestcraft-2-food-extended')
+        mainFile.addOptional('the-veggie-way')
     }
 }
 
