--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ mod_menu_version=11.0.1
 
 # NeoForge
 # https://projects.neoforged.net/neoforged/neoforge
-neoforge_version=21.0.143
+neoforge_version=21.0.148
 neoforge_loader_version_range=[21.0.143,)
 neoforge_mc_version_range=[1.21, 1.22)
 neo_form_version=1.21-20240613.152323
@@ -67,6 +67,7 @@ phc_food_extended_neoforge_version=5581646
 crafttweaker_neoforge_version=5559536
 kubejs_neoforge_version=5580858
 rhino_neoforge_version=5554415
+the_veggie_way_neoforge_version=5587596
 
 # Mod options
 mod_name=Homeostatic
