Add support for The Veggie Way

--- a/gradle.properties
+++ b/gradle.properties
@@ -63,6 +63,7 @@ phc_food_extended_forge_version=5147171
 crafttweaker_forge_version=5375591
 kubejs_forge_version=5454840
 rhino_forge_version=4944325
+the_veggie_way_forge_version=5267580
 
 # Mod options
 mod_name=Homeostatic
