--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -136,6 +136,7 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:phc_crops-361385:${phc_crops_forge_version}")
         //runtimeOnly fg.deobf("curse.maven:phc_trees-365460:${phc_trees_forge_version}")
         //runtimeOnly fg.deobf("curse.maven:phc_food_extended-402231:${phc_food_extended_forge_version}")
+        //runtimeOnly fg.deobf("curse.maven:the_veggie_way-270684:${the_veggie_way_forge_version}")
     }
 }
 
@@ -257,6 +258,7 @@ task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
         mainFile.addOptional('pams-harvestcraft-2-crops')
         mainFile.addOptional('pams-harvestcraft-2-trees')
         mainFile.addOptional('pams-harvestcraft-2-food-extended')
+        mainFile.addOptional('the-veggie-way')
     }
 }
 
