--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -99,7 +99,7 @@ dependencies {
         //runtimeOnly "vazkii.patchouli:Patchouli:${patchouli_version}-FORGE-SNAPSHOT"
         runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_forge_version}")
         //runtimeOnly fg.deobf("dev.gigaherz.sewingkit:SewingKit-${minecraft_version}:${sewingkit_version}")
-        //runtimeOnly fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
+        //runtimeOnly fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_forge_version}")
         //runtimeOnly fg.deobf("curse.maven:configured-457570:4462839")
         //runtimeOnly fg.deobf("curse.maven:biomesoplenty-220318:${bop_forge_version}")
         //runtimeOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_forge_version}")
@@ -137,6 +137,9 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:phc_trees-365460:${phc_trees_forge_version}")
         //runtimeOnly fg.deobf("curse.maven:phc_food_extended-402231:${phc_food_extended_forge_version}")
         //runtimeOnly fg.deobf("curse.maven:the_veggie_way-270684:${the_veggie_way_forge_version}")
+        runtimeOnly fg.deobf("curse.maven:kotlin-351264:5402061")
+        runtimeOnly fg.deobf("curse.maven:valkyrien_skies-258371:5212232")
+        runtimeOnly fg.deobf("curse.maven:eureka_ships-654384:5321630")
     }
 }
 
