Update testing mod versions.

--- a/build.gradle
+++ b/build.gradle
@@ -131,7 +131,7 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:geckolib-388172:4407241")
         //runtimeOnly fg.deobf("curse.maven:byg-247560:${byg_version}")
         //runtimeOnly fg.deobf("curse.maven:twilightforest-227639:${twilight_forest_version}")
-        //runtimeOnly fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
+        runtimeOnly fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
         //runtimeOnly fg.deobf("curse.maven:botania-225643:???")
         //runtimeOnly fg.deobf("curse.maven:patchouli-306770:3936481")
         //runtimeOnly fg.deobf("curse.maven:curios-309927:3924518")
