--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -16,8 +16,9 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
 
-    modImplementation "com.illusivesoulworks.spectrelib:spectrelib-fabric:${spectrelib_version}+${minecraft_version}"
-    include "com.illusivesoulworks.spectrelib:spectrelib-fabric:${spectrelib_version}+${minecraft_version}"
+    modImplementation "com.illusivesoulworks.spectrelib:spectrelib-fabric:${spectrelib_version}"
+    include "com.illusivesoulworks.spectrelib:spectrelib-fabric:${spectrelib_version}"
+    include group: 'com.illusivesoulworks.spectrelib', name: 'spectrelib-fabric', version: "${spectrelib_version}"
 
     modApi "dev.architectury:architectury-fabric:${architectury_version}"
     modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}") {
@@ -27,8 +28,8 @@ dependencies {
     modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${rei_version}"
     modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${rei_version}"
 
-    modCompileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
-    modCompileOnly "mezz.jei:jei-${minecraft_version}-fabric:${jei_version}"
+    modCompileOnly "mezz.jei:jei-1.21-common-api:${jei_version}"
+    modCompileOnly "mezz.jei:jei-1.21-fabric:${jei_version}"
     //modCompileOnly "curse.maven:create_fabric-624165:${create_fabric_version}"
     modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-base:${cardinal_components_version}"
     modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-entity:${cardinal_components_version}"
@@ -36,10 +37,9 @@ dependencies {
     include "org.ladysnake.cardinal-components-api:cardinal-components-entity:${cardinal_components_version}"
     // Not available for 1.20.4 :(
     //modCompileOnly "curse.maven:fabric_seasons-413523:${fabric_seasons_version}"
-    modImplementation "curse.maven:sereneseasons-291874:${serene_seasons_fabric_version}"
-    modImplementation "curse.maven:glitchcore-955399:${glitch_core_fabric_version}"
+    modCompileOnly "curse.maven:sereneseasons-291874:${serene_seasons_fabric_version}"
+    modCompileOnly "curse.maven:glitchcore-955399:${glitch_core_fabric_version}"
     modImplementation "vazkii.patchouli:Patchouli:${patchouli_version}-FABRIC-SNAPSHOT"
-    modRuntimeOnly "curse.maven:simpletextoverlay-321283:${simpletextoverlay_fabric_version}"
     modRuntimeOnly "net.jodah:typetools:0.6.3"
     modImplementation "com.electronwill.night-config:core:3.6.7"
 
@@ -56,7 +56,7 @@ dependencies {
         //modRuntimeOnly "curse.maven:create_fabric-624165:${create_fabric_version}"
         //modRuntimeOnly "curse.maven:biomesoplenty-220318:${bop_fabric_version}"
         //modRuntimeOnly "curse.maven:terrablender-565956:${terrablender_fabric_version}"
-        modRuntimeOnly "curse.maven:simpletextoverlay-321283:${simpletextoverlay_fabric_version}"
+        //modRuntimeOnly "curse.maven:simpletextoverlay-321283:${simpletextoverlay_fabric_version}"
         //modRuntimeOnly "curse.maven:more_food-874343:${more_food_fabric_version}"
     }
 }
