--- a/gradle.properties
+++ b/gradle.properties
@@ -5,35 +5,35 @@ org.gradle.daemon=false
 # Project
 version=2.9.8.1
 last_mod_version=2.9.8.0
-neoforge_mod_version=1.21-2.9.8.1-NEOFORGE
-fabric_mod_version=1.21-2.9.8.1-FABRIC
+neoforge_mod_version=1.21.1-2.9.8.1-NEOFORGE
+fabric_mod_version=1.21.1-2.9.8.1-FABRIC
 java_version=21
 
 # Common
-minecraft_version=1.21
+minecraft_version=1.21.1
 
 # Fabric
-fabric_version=0.100.4+1.21
+fabric_version=0.102.1+1.21.1
 fabric_loader_version=0.15.11
 fabric_loader_min_version=>=0.15
 mod_menu_version=11.0.1
 
 # NeoForge
 # https://projects.neoforged.net/neoforged/neoforge
-neoforge_version=21.0.148
+neoforge_version=21.1.8
 neoforge_loader_version_range=[21.0.143,)
 neoforge_mc_version_range=[1.21, 1.22)
-neo_form_version=1.21-20240613.152323
+neo_form_version=1.21.1-20240808.144430
 
 # Mappings
 parchment_mc_version=1.21
-parchment_version=2024.06.23
+parchment_version=2024.07.28
 mappings_channel=parchment
 
 # Other mods
 jei_version=19.5.0.56
 rei_version=16.0.744
-spectrelib_version=0.17.2
+spectrelib_version=0.17.2+1.21
 spectrelib_range=[0.17,0.18)
 architectury_version=13.0.6
 cloth_config_version=15.0.128
@@ -82,4 +82,4 @@ mod_update_branch=1.21
 
 # CurseForge/Modrinth Options
 release_type=release
-release_versions=1.21
+release_versions=1.21,1.21.1
