Add support for Eternal Starlight campfire. Fixes #65

--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -143,6 +143,7 @@ task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
         mainFile.addOptional('patchouli')
         mainFile.addOptional('primal-winter')
         mainFile.addOptional('more-food-xd')
+        mainFile.addOptional('eternal-starlight')
     }
 }
 
@@ -172,6 +173,7 @@ modrinth {
             optional.project 'biomesyougo'
             optional.project 'fruitful-fun'
             optional.project 'more-food-xd'
+            optional.project 'eternal-starlight'
         }
     }
 }
