Allow mod to work on 1.21 and 1.21.1 for Fabric.

--- a/buildSrc/src/main/groovy/multiloader-common.gradle
+++ b/buildSrc/src/main/groovy/multiloader-common.gradle
@@ -150,6 +150,7 @@ processResources {
         'mod_url': mod_url,
         'minecraft_version': minecraft_version,
         'fabric_loader_min_version': fabric_loader_min_version,
+        'fabric_mc_version_range': fabric_mc_version_range,
         'neoforge_loader_version_range': neoforge_loader_version_range,
         'neoforge_mc_version_range': neoforge_mc_version_range
     ]
