--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Project
-version=2.9.8.2
-last_mod_version=2.9.8.1
-neoforge_mod_version=1.21.1-2.9.8.2-NEOFORGE
-fabric_mod_version=1.21.1-2.9.8.2-FABRIC
+version=2.9.9.0
+last_mod_version=2.9.8.2
+neoforge_mod_version=1.21.1-2.9.9.0-NEOFORGE
+fabric_mod_version=1.21.1-2.9.9.0-FABRIC
 java_version=21
 
 # Common
@@ -16,6 +16,7 @@ minecraft_version=1.21.1
 fabric_version=0.102.1+1.21.1
 fabric_loader_version=0.15.11
 fabric_loader_min_version=>=0.15
+fabric_mc_version_range=["1.21","1.21.1"]
 mod_menu_version=11.0.1
 
 # NeoForge
